harbor/kuber/02-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: harbor-db-svc
  namespace: harbor
spec:
  ports:
    - name: stardard-port
      port: 5432
      targetPort: 5432
  selector:
    name: harbor-db-apps
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: harbor-db
  namespace: harbor
  labels:
    name: harbor-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: harbor-db-apps
    spec:
      containers:
      - name: harbor-db-app
        image: goharbor/harbor-db:v1.8.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: nfs-data-vol
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: nfs-data-vol
          nfs:
            server: 192.168.7.14
            path: /mnt/nfsvol/harbor/database
