harbor/kuber/05-registryctl.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registryctl-svc
  namespace: harbor
spec:
  ports:
    - name: stardard-port
      port: 8080
      targetPort: 8080
  selector:
    name: registryctl-apps
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registryctl
  namespace: harbor
  labels:
    name: registryctl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: registryctl-apps
    spec:
      containers:
      - name: registryctl-app
        image: goharbor/harbor-registryctl:v1.8.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: nfs-registryctl-vol
            mountPath: /storage
          - name: registry-cfg-vol
            mountPath: /etc/registry
          - name: registryctl-cfg-vol
            mountPath: /etc/registryctl
      volumes:
        - name: registry-cfg-vol
          configMap:
            name: registry-cfg-map
        - name: registryctl-cfg-vol
          configMap:
            name: registryctl-cfg-map
        - name: nfs-registryctl-vol
          nfs:
            server: 192.168.7.14
            path: /mnt/nfsvol/harbor/registry
