harbor/kuber/08-portal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portal-svc
  namespace: harbor
spec:
  ports:
    - name: stardard-port
      port: 80
      targetPort: 80
  selector:
    name: portal-apps
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: portal
  namespace: harbor
  labels:
    name: portal
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: portal-apps
    spec:
      containers:
      - name: portal-app
        image: goharbor/harbor-portal:v1.8.2
        imagePullPolicy: IfNotPresent
