harbor/kuber/09-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-svc
  namespace: harbor
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: 80
    - name: https-port
      port: 443
      targetPort: 443
  selector:
    name: proxy-apps
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: proxy
  namespace: harbor
  labels:
    name: proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: proxy-apps
    spec:
      containers:
      - name: proxy-app
        image: goharbor/nginx-photon:v1.8.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: proxy-crt-vol
            mountPath: /etc/cert
          ## 这个其实是配置文件目录, 但是nginx进程会创建多个temp目录, 
          ## 通过configmap挂载的卷不可写, 所以这里改成用nfs挂载, 
          ## 注意其中需要事先存在nginx.conf文件才行.
          - name: nfs-nginx-vol
            mountPath: /etc/nginx

      volumes:
        - name: proxy-crt-vol
          configMap:
            name: proxy-crt-map
        - name: nfs-nginx-vol
          nfs:
            server: 192.168.7.14
            path: /mnt/nfsvol/harbor/proxy_nginx
